force-app/main/default/objects/Product_Group__c/fields/Available_for_Pricing_model__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Pricing_model__c</fullName>
    <label>Selected Pricing Models</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Show_Pricing_Models__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Pricing_Model</valueSetName>
    </valueSet>
</CustomField>