force-app/main/default/objects/Product_Group__c/fields/Default_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Term__c</fullName>
    <label>Default Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Show_Payment_Terms__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Payment_Terms</valueSetName>
    </valueSet>
</CustomField>