force-app/main/default/objects/Product_Group__c/fields/Default_Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_Pricing_Model__c</fullName>
    <label>Default Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Show_Pricing_Models__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Pricing_Model</valueSetName>
    </valueSet>
</CustomField>