force-app/main/default/objects/Product_Group__c/fields/Default_Selected_Fees__c.field-meta.xml
<CustomField>
    <fullName>Default_Selected_Fees__c</fullName>
    <label>Default Selected Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Selected_Fees_Calculation_model</valueSetName>
    </valueSet>
</CustomField>