force-app/main/default/objects/Product_Group__c/fields/Fixed_Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Pricing_Model__c</fullName>
    <label>Fixed Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricing_Model</valueSetName>
    </valueSet>
</CustomField>