force-app/main/default/objects/Product_Group__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <inlineHelpText>Please use {0} condition in help text if you want to use maximum payment terms in Help text from payment terms level, depending on user country group.</inlineHelpText>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>