force-app/main/default/objects/Product_Group__c/fields/Hide_on_Print_View__c.field-meta.xml
<CustomField>
    <fullName>Hide_on_Print_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide on Print View</label>
    <type>Checkbox</type>
</CustomField>