force-app/main/default/objects/Product_Group__c/fields/Information_Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Information_Section_Label__c</fullName>
    <defaultValue>&#39;Pricing Details&#39;</defaultValue>
    <label>Information Section Label</label>
    <type>TextArea</type>
</CustomField>