force-app/main/default/objects/Product_Group__c/fields/Invoice_Details__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Details__c</fullName>
    <label>Invoice Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimal (agency level)</fullName>
            </value>
            <value>
                <fullName>Medium (end client level)</fullName>
            </value>
            <value>
                <fullName>Maximum (campaign level)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>