force-app/main/default/objects/Product_Group__c/fields/Invoice_Level__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Level__c</fullName>
    <label>Invoice Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>End Client</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>