force-app/main/default/objects/Product_Group__c/fields/Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Template__c</fullName>
    <label>Invoice Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master Data</fullName>
            </value>
            <value>
                <fullName>RTB</fullName>
            </value>
            <value>
                <fullName>SE Integrations</fullName>
            </value>
            <value>
                <fullName>TPAS</fullName>
            </value>
            <value>
                <fullName>Pixel Apps</fullName>
            </value>
            <value>
                <fullName>Creative service</fullName>
            </value>
            <value>
                <fullName>Minimum Fee</fullName>
            </value>
            <value>
                <fullName>INTERNAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>