force-app/main/default/objects/Product_Group__c/fields/Invoicing_Period__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Period__c</fullName>
    <label>Invoicing Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>On Campaign End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>