force-app/main/default/objects/Product_Group__c/fields/Parent_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product Group</label>
    <referenceTo>Product_Group__c</referenceTo>
    <relationshipName>Product_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>