force-app/main/default/objects/Product_Group__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Show_Payment_Terms__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Payment_Terms</valueSetName>
    </valueSet>
</CustomField>