force-app/main/default/objects/Product_Group__c/fields/Print_Out_Label__c.field-meta.xml
<CustomField>
    <fullName>Print_Out_Label__c</fullName>
    <label>Print Out Label</label>
    <type>TextArea</type>
</CustomField>