force-app/main/default/objects/Product_Group__c/fields/Products_Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Products_Section_Label__c</fullName>
    <defaultValue>&#39;Pricing Rates&#39;</defaultValue>
    <label>Products Section Label</label>
    <type>TextArea</type>
</CustomField>