force-app/main/default/objects/Product_Group__c/fields/Selected_Fees_Calculation_model__c.field-meta.xml
<CustomField>
    <fullName>Selected_Fees_Calculation_model__c</fullName>
    <label>Selected Fees Calculation model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Selected_Fees_Calculation_model</valueSetName>
    </valueSet>
</CustomField>