force-app/main/default/objects/Product_Group__c/fields/Show_Invoice_Details__c.field-meta.xml
<CustomField>
    <fullName>Show_Invoice_Details__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Invoice Details</label>
    <type>Checkbox</type>
</CustomField>