force-app/main/default/objects/Product_Group__c/fields/Show_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Show_Payment_Terms__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Payment Terms</label>
    <type>Checkbox</type>
</CustomField>