force-app/main/default/objects/Product_Group__c/fields/Show_Pricing_Models__c.field-meta.xml
<CustomField>
    <fullName>Show_Pricing_Models__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Pricing Models</label>
    <type>Checkbox</type>
</CustomField>