force-app/main/default/objects/Product_Group__c/fields/Without_Information__c.field-meta.xml
<CustomField>
    <fullName>Without_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if information section should be displayed</description>
    <label>Without Information</label>
    <type>Checkbox</type>
</CustomField>