force-app/main/default/objects/Product_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Label__c</columns>
    <columns>Order__c</columns>
    <columns>Invoice_Template__c</columns>
    <columns>Parent_Product_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>